<resources>
    <string name="app_name">eCourage</string>

    <!-- Intro Buttons -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET\'S GO</string>

    <!-- Intro Slider One Title and Description -->
    <string name="slideOne_title">Welcome!</string>
    <string name="slideOne_description">Act with eCourage. Together we can you meet your goals. Swipe to see what you can do!</string>
    <!-- Intro Slider Two Title and Description -->
    <string name="slideTwo_title">Importance of Direct Action</string>
    <string name="slideTwo_description">Survivors of disaster, violence, or other traumas often feel out of control. eCourage will help you decide on simple positive actions that can help strengthen your sense of control.</string>
    <!-- Intro Slider Three Title and Description -->
    <string name="slideThree_title">Types of Direct Action</string>
    <string name="slideThree_description">eCourage can help you calm your body and mind, get support from others, lift your mood, support others as well as yourself, and move towards wise use of alcohol or drugs.</string>
    <!-- Intro Slider Four Title and Description -->
    <string name="slideFour_title">Your Own Choices</string>
    <string name="slideFour_description">eCourage doesn\'t impose any requirements. You set your own goals and choose the means that help you most. We\'re simply here to help! </string>
    <!-- Intro Slider Five Title and Description -->
    <string name="slideFive_title">Keep It Simple</string>
    <string name="slideFive_description">Demo Description</string>
    <!-- Intro Slider Six Title and Description -->
    <string name="slideSix_title">Tiny Habits</string>
    <string name="slideSix_description">Demo Description</string>
    <!-- Intro Slider Seven Title and Description -->
    <string name="slideSeven_title">Make a Commitment</string>
    <string name="slideSeven_description">Demo Description</string>
    <!-- Intro Slider Eight Title and Description -->
    <string name="slideEight_title">5-Minute Daily Challenge</string>
    <string name="slideEight_description">Demo Description</string>

    <!-- Login -->
    <string name="ecourage">eCourage</string>
    <string name="welcome_to_ecourage">Welcome to eCourage!</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Sign up -->
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_get_support">GetSupport</string>
    <string name="title_activity_are_you_a_coach">Are You a Coach?</string>

    <!--coach stuff-->
    <string name="invite_a_coach_button">Invite a Coach</string>
    <string name="invite_a_coach_title">Invite a Coach</string>
    <string name="coach_username">Coach Username</string>
    <string name="send_invite">Send Invite</string>
    <string name="your_coach_is">Your Coach is a friend or family member who connects with you and helps monitor your progress</string>

    <!-- Lift Your Mood Strings -->
    <string name="LYM_p1">Doing Positive Activities can slowly make us feel more positive about life, that life is worth living.</string>
    <string name="LYM_p2">Positive activities are an important part of feeling like life is worth living.</string>
    <string name="LYM_p3">It is easy for the enjoyable aspects of life to get lost or forgotten, because of traumatic stress and sadness.</string>
    <string name="LYM_p4">However, the less and less we engage in doing things that make us feel good,the more and more the stress and sadness can take over.</string>
    <string name="LYM_p5">Integrating Positive Activities back into daily life after trauma can, over time, increase positive feelings and decrease feels like sadness and despair.</string>
    <string name="LYM_p6">You might think that you have to do BIG things to feel these effects but doing even small things can be helpful.</string>
    <string name="LYM_p7">It’s important to remember that these activities don’t have to take a lot of time! Start Small!</string>
    <string name="LYM_p8">Doing Positive Activities can slowly make us feel more positive about life, that life is worth living.</string>
    <string name="log_out">Log Out</string>

    <!-- Be Your Own Friend Strings -->
    <string name="byof_1">Trying to make sense of what happened is part of the natural human response to trauma.  Most people spend a lot of time thinking about what happened, why it happened, and what it means for the future.</string>
    <string name="byof_2">When bad things happen, we often find ourselves thinking a lot. In fact, traumatic events can weaken our confidence in ourselves, change our view of others, and make us worry.</string>
    <string name="byof_3">How you think - what you say to yourself about what happened or is happening - will affect your mood and emotions, how you cope with your challenges, and how effectively you build your life.</string>
    <string name="byof_4">Being your own friend means talking to yourself in a way that strengthens you, helps you remain positive, and keeps you stay focused on the path forward.</string>
    <string name="byof_5">Helpful thoughts can help you feel in control and able to cope.  For example, thoughts like “I’ve come through other things, I can come through this too” or “Things will get better with time” or “I’ve just got to take things slowly, one day at a time.”</string>
    <string name="byof_6">It is important for you to become more aware of what you are saying to yourself, and to gradually replace your negative self-talk with thoughts that help your recovery.  </string>
    <string name="byof_7">It’s not that you’re wrong to think in any particular way.  Your beliefs make sense in terms of what has happened to you.  But the goal here is to help you think about things in ways that help you feel more calm and positive.</string>
    <string name="byof_8">Beliefs and Judgments are not the same things as “facts.” They are opinions, judgments, and interpretations that could be true or not true, exaggerated or realistic, and helpful or unhelpful. </string>
    <string name="byof_9">Many people feeling strong stress often wonder, “Am I going crazy?”  This is a thought or belief, not a fact.  It is not a fact that you’re going crazy.  There is nothing crazy about having uncontrollable distress and upsetting thoughts after trauma; they happen to almost everyone.  </string>
    <string name="byof_10">Many people think that having trouble coping with trauma means that they’re “weak.” But actually many strong, competent people have very painful reactions to stress.  </string>
    <string name="byof_11">The more you tell yourself that you’re crazy or weak, the more you feel bad.  In reverse, if you tell yourself that these reactions are a normal part of getting over a trauma, and that you can learn ways to help yourself cope with these reactions, you may feel less bad.</string>
    <string name="byof_12">We want to help you rethink your upsetting beliefs and replace unhelpful self-talk with helpful self-talk that helps you feel stronger and more in control.</string>

<string name="byof_title">Be Your Own Friend</string>

<<<<<<< HEAD
    <string name="byof_spinner_prompt">Test List</string>

=======
>>>>>>> 6bf32b12f8d7a28b329122fb41ae98c8375bdf4c
</resources>
