<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeLabel"
        android:text="@string/welcome_to_ecourage"
        android:textSize="30sp"
        android:layout_weight="0.14"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/signInLabel"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameField"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLabel"
        android:text="@string/password"
        android:textStyle="bold"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Log In"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:layout_marginTop="10dp"
        android:onClick="login" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Not a member? Sign Up"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:onClick="signUp" />

</LinearLayout>